style touch ups

--- a/streamius/src/app/app.component.html
+++ b/streamius/src/app/app.component.html
@@ -3,6 +3,9 @@
   <h1>
     {{ title }}
   </h1>
+  <h3>
+    {{ subtitle }}
+  </h3>
   <search-bar></search-bar>
 <router-outlet></router-outlet>
 </div>
