--- a/streamius/src/app/components/searchBar/searchBar.component.html
+++ b/streamius/src/app/components/searchBar/searchBar.component.html
@@ -1,6 +1,6 @@
 <form>
-  <mat-form-field>
-    <input matInput id="search-bar" placeholder="Search for TV and Movies" ngModel name="searchString">
+  <mat-form-field id="search-bar">
+    <input matInput placeholder="Search for TV and Movies" ngModel name="searchString">
   </mat-form-field>
   <button mat-raised-button (click)="search()">Search</button>
 </form>
